--- a/app/src/main/res/layout/recipe_info.xml
+++ b/app/src/main/res/layout/recipe_info.xml
@@ -110,11 +110,34 @@
                 android:textStyle="bold|italic" />
         </androidx.cardview.widget.CardView>
 
+        <!-- Twitter Share Button -->
+        <ImageView
+            android:id="@+id/twitterShareButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/twitter" />
+
+        <!-- Instagram Share Button -->
+        <ImageView
+            android:id="@+id/instagramShareButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:layout_toStartOf="@id/twitterShareButton"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/instagram" />
+
         <ImageView
             android:id="@+id/recipeInfoImage"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_below="@+id/backButton"
+            android:layout_below="@id/backButton"
             android:scaleType="centerCrop"
             android:layout_marginBottom="16dp"/>
 
