--- a/app/src/main/res/layout/filter_recipes.xml
+++ b/app/src/main/res/layout/filter_recipes.xml
@@ -78,13 +78,13 @@
         android:orientation="horizontal">
 
         <RadioButton
-            android:id="@+id/radioLessThan"
+            android:id="@+id/radioCalorieLessThan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="less than" />
 
         <RadioButton
-            android:id="@+id/radioMoreThan"
+            android:id="@+id/radioCalorieMoreThan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="more than" />
