--- a/app/src/main/res/layout/filter_recipes.xml
+++ b/app/src/main/res/layout/filter_recipes.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,11 +13,10 @@
         android:layout_height="wrap_content"
         android:text="Type" />
 
-    <RadioGroup
-        android:id="@+id/typeRadioGroup"
+    <androidx.gridlayout.widget.GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        app:columnCount="3">
 
         <RadioButton
             android:id="@+id/radioMain"
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Other" />
-    </RadioGroup>
+    </androidx.gridlayout.widget.GridLayout>
 
     <!-- Calories Section -->
     <TextView
@@ -71,11 +71,9 @@
         android:inputType="number" />
 
     <!-- Comparison Section for Calories -->
-    <RadioGroup
-        android:id="@+id/caloriesComparisonRadioGroup"
+    <androidx.gridlayout.widget.GridLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <RadioButton
             android:id="@+id/radioCalorieLessThan"
@@ -88,7 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="more than" />
-    </RadioGroup>
+    </androidx.gridlayout.widget.GridLayout>
 
     <!-- Preparation Time Section -->
     <TextView
@@ -106,11 +104,9 @@
         android:inputType="number" />
 
     <!-- Comparison Section for Preparation Time -->
-    <RadioGroup
-        android:id="@+id/prepTimeComparisonRadioGroup"
+    <androidx.gridlayout.widget.GridLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <RadioButton
             android:id="@+id/radioPrepTimeLessThan"
@@ -123,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="more than" />
-    </RadioGroup>
+    </androidx.gridlayout.widget.GridLayout>
 
     <!-- Save Filters Button -->
     <Button
